--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sass": "^1.84.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
