--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "rollup-plugin-gzip": "^4.0.1",
     "sass-embedded": "^1.79.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
