--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass-embedded": "^1.79.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
