--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
